--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -80,7 +80,7 @@ if (secretsFile.exists()) {
 
 def versionMajor = 2
 def versionMinor = 9
-def versionPatch = 5
+def versionPatch = 6
 
 
 
@@ -95,7 +95,7 @@ android {
         //versionCode LEGACY_BUILD_NUMBER_OFFSET + getMasterCommitCount()
         //versionName getVersionName()
         versionCode versionMajor*100+versionMinor*100+versionPatch
-        versionName "${versionMajor}.${versionMinor}.${versionPatch}-alpha"
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}-beta"
         System.out.println(versionName + " " + versionCode)
         testInstrumentationRunner('android.support.test.runner.AndroidJUnitRunner')
         multiDexEnabled true
