--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -351,6 +351,9 @@
         <activity
             android:name="org.bcss.collect.naxa.BackupActivity"/>
 
+        <activity android:name="org.bcss.collect.naxa.report.ReportActivity"
+            android:exported="true"/>
+
         <activity android:name="org.bcss.collect.naxa.flagform.FlaggedInstanceActivityNew" />
         <activity android:name="org.bcss.collect.naxa.common.SettingsActivity" />
         <activity
