--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -80,7 +80,7 @@ if (secretsFile.exists()) {
 
 def versionMajor = 2
 def versionMinor = 8
-def versionPatch = 11
+def versionPatch = 12
 
 
 
@@ -94,7 +94,7 @@ android {
         //versionCode LEGACY_BUILD_NUMBER_OFFSET + getMasterCommitCount()
         //versionName getVersionName()
         versionCode versionMajor*100+versionMinor*100+versionPatch
-        versionName "${versionMajor}.${versionMinor}.${versionPatch}-beta"
+        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
         System.out.println(versionName + " " + versionCode)
         testInstrumentationRunner('android.support.test.runner.AndroidJUnitRunner')
         multiDexEnabled true
