[#271] adds empty buildconfig field

--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -21,7 +21,7 @@ def getProps(String propName) {
         props.load(new FileInputStream(propsFile))
         return props[propName]
     } else {
-        return "";
+        return " "
     }
 }
 
