--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -363,7 +363,9 @@
         <activity android:name="org.bcss.collect.naxa.v3.ProjectListActivityV3"
             android:exported="true"/>
         <activity android:name="org.bcss.collect.naxa.v3.network.SyncActivity" />
-        <activity android:name="org.bcss.collect.naxa.forms.FieldSightFormDownloadList" />
+        <activity
+
+            android:name="org.bcss.collect.naxa.forms.FieldSightFormDownloadList" />
 
         <service android:name="org.bcss.collect.naxa.v3.network.SyncServiceV3"/>
         <!-- end of new activity list -->
