--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -82,7 +82,9 @@ the specific language governing permissions and limitations under the License.
 
     <application
         android:name=".application.Collect"
-        android:icon="@drawable/notes"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
+        android:icon="@drawable/ic_launcher_fieldsight"
         android:installLocation="auto"
         android:label="@string/app_name"
         android:largeHeap="true"
@@ -98,65 +100,127 @@ the specific language governing permissions and limitations under the License.
                 android:resource="@xml/provider_paths" />
         </provider>
 
+        <!--Activities from FieldSight [starts]-->
+        <activity android:name="org.bcss.collect.naxa.login.BaseLoginActivity" />
+
         <activity
-            android:name=".activities.MainMenuActivity"
+            android:name="org.bcss.collect.naxa.login.LoginActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name="org.bcss.collect.naxa.project.ProjectListActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.Light" />
+        <activity android:name="org.bcss.collect.naxa.site.FragmentHostActivity" />
+        <activity android:name="org.bcss.collect.naxa.site.ProjectDashboardActivity" />
+        <activity android:name="org.bcss.collect.naxa.site.CreateSiteActivity" />
+        <activity android:name="org.bcss.collect.naxa.survey.SurveyFormsActivity" />
+        <activity android:name="org.bcss.collect.naxa.submissions.PreviousSubmissionListActivity" />
+        <activity android:name="org.bcss.collect.naxa.submissions.PreviousSubmissionDetailActivity" />
+        <activity android:name="org.bcss.collect.naxa.notificationslist.NotificationListActivity" />
+        <activity android:name="org.bcss.collect.naxa.notificationslist.FlaggedInstanceActivity" />
+        <activity android:name="org.bcss.collect.naxa.project.MapActivity" />
+        <activity android:name="org.bcss.collect.naxa.profile.UserProfileActivity" />
+        <activity android:name="org.bcss.collect.naxa.profile.UserActivity" />
+        <activity android:name="org.bcss.collect.naxa.sitedocuments.SiteDocumentsListActivity" />
+        <activity
+            android:name="org.bcss.collect.naxa.sitedocuments.ImageViewerActivity"
+            android:label="@string/title_activity_image_viewer"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name="org.bcss.collect.naxa.migrate.MigrateFieldSightActivity" />
+        <activity android:name="org.bcss.collect.naxa.educational.EducationalMaterialActivity" />
+        <activity android:name="org.bcss.collect.naxa.project.AppUpdateActivity" />
+        <activity android:name="org.bcss.collect.naxa.educational.EduMat_ViewTextTitleDetailsActivity" />
+        <activity android:name="org.bcss.collect.naxa.educational.EduMat_ViewImageDetailsActivity" />
+        <activity android:name="org.bcss.collect.naxa.educational.EduMat_ViewVideoDetailsActivity" />
+        <activity android:name="org.bcss.collect.naxa.sync.ContentDownloadActivity" />
+        <activity android:name="org.bcss.collect.naxa.onboarding.DownloadActivity" />
+        <activity
+            android:name=".SiteProfileActivity"
+            android:label="@string/title_activity_site_profile"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name="org.bcss.collect.naxa.report.ReportActivity" />
+
+        <activity android:name="org.bcss.collect.naxa.flagform.FlaggedInstanceActivityNew" />
+        <activity android:name="org.bcss.collect.naxa.common.SettingsActivity" />
+        <activity android:name="org.bcss.collect.naxa.preferences.SettingsActivity" />
+
+        <activity android:name="org.bcss.collect.naxa.v3.ProjectListActivityV3" />
+        <activity android:name="org.bcss.collect.naxa.v3.network.SyncActivity" />
+        <activity android:name="org.bcss.collect.naxa.forms.FieldSightFormDownloadList" />
+
+        <!--Activities from FieldSight [ends]-->
+
+        <!--Services from FieldSight [ends]-->
+
+        <service android:name="org.bcss.collect.naxa.v3.network.SyncServiceV3" />
+        <service android:name="org.bcss.collect.naxa.onboarding.XMLFormDownloadService" /> <!-- ... -->
+        <service android:name="org.bcss.collect.naxa.firebase.FieldSightFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <!--Services from FieldSight [ends]-->
+        <activity
+            android:name="org.odk.collect.android.activities.MainMenuActivity"
             android:configChanges="locale|orientation|screenSize" />
         <activity
-            android:name=".activities.ScannerWithFlashlightActivity"
+            android:name="org.odk.collect.android.activities.ScannerWithFlashlightActivity"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
-            android:name=".activities.FormEntryActivity"
+            android:name="org.odk.collect.android.activities.FormEntryActivity"
             android:configChanges="orientation"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".activities.NotificationActivity"
+            android:name="org.odk.collect.android.activities.NotificationActivity"
             android:excludeFromRecents="true"
             android:launchMode="singleTask"
             android:taskAffinity=""
             android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
         <activity
-            android:name=".activities.DrawActivity"
+            android:name="org.odk.collect.android.activities.DrawActivity"
             android:screenOrientation="landscape" />
         <activity
-            android:name=".activities.GoogleDriveActivity"
+            android:name="org.odk.collect.android.activities.GoogleDriveActivity"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".activities.InstanceChooserList" />
-        <activity android:name=".activities.FormChooserList" />
-        <activity android:name=".activities.FormDownloadList" />
+        <activity android:name="org.odk.collect.android.activities.InstanceChooserList" />
+        <activity android:name="org.odk.collect.android.activities.FormChooserList" />
+        <activity android:name="org.odk.collect.android.activities.FormDownloadList" />
         <activity
-            android:name=".activities.FileManagerTabs"
+            android:name="org.odk.collect.android.activities.FileManagerTabs"
             android:configChanges="orientation|screenSize" />
         <activity
-            android:name=".activities.GoogleSheetsUploaderActivity"
+            android:name="org.odk.collect.android.activities.GoogleSheetsUploaderActivity"
             android:configChanges="orientation|screenSize" />
         <activity
-            android:name=".activities.InstanceUploaderListActivity"
+            android:name="org.odk.collect.android.activities.InstanceUploaderListActivity"
             android:configChanges="orientation|screenSize" />
-        <activity android:name=".activities.InstanceUploaderActivity" />
-        <activity android:name=".activities.AboutActivity" />
-        <activity android:name=".preferences.PreferencesActivity" />
-        <activity android:name=".preferences.AdminPreferencesActivity" />
-        <activity android:name=".activities.FormHierarchyActivity" />
-        <activity android:name=".activities.ViewOnlyFormHierarchyActivity" />
-        <activity android:name=".activities.GeoPointActivity" />
+        <activity android:name="org.odk.collect.android.activities.InstanceUploaderActivity" />
+        <activity android:name="org.odk.collect.android.activities.AboutActivity" />
+        <activity android:name="org.odk.collect.android.preferences.PreferencesActivity" />
+        <activity android:name="org.odk.collect.android.preferences.AdminPreferencesActivity" />
+        <activity android:name="org.odk.collect.android.activities.FormHierarchyActivity" />
+        <activity android:name="org.odk.collect.android.activities.ViewOnlyFormHierarchyActivity" />
+        <activity android:name="org.odk.collect.android.activities.GeoPointActivity" />
         <activity
-            android:name=".activities.GeoPointMapActivity"
+            android:name="org.odk.collect.android.activities.GeoPointMapActivity"
             android:configChanges="orientation" />
         <activity
-            android:name=".activities.GeoPolyActivity"
+            android:name="org.odk.collect.android.activities.GeoPolyActivity"
             android:configChanges="orientation" />
-        <activity android:name=".activities.BearingActivity" />
+        <activity android:name="org.odk.collect.android.activities.BearingActivity" />
         <activity
-            android:name=".activities.SplashScreenActivity"
+            android:name="org.odk.collect.android.activities.SplashScreenActivity"
             android:theme="@android:style/Theme.Dialog" />
-        <activity android:name=".activities.CaptureSelfieActivity" />
-        <activity android:name=".activities.CaptureSelfieActivityNewApi" />
-        <activity android:name=".activities.WebViewActivity" />
-        <activity android:name=".activities.CaptureSelfieVideoActivity" />
-        <activity android:name=".activities.CaptureSelfieVideoActivityNewApi" />
+        <activity android:name="org.odk.collect.android.activities.CaptureSelfieActivity" />
+        <activity android:name="org.odk.collect.android.activities.CaptureSelfieActivityNewApi" />
+        <activity android:name="org.odk.collect.android.activities.WebViewActivity" />
+        <activity android:name="org.odk.collect.android.activities.CaptureSelfieVideoActivity" />
+        <activity android:name="org.odk.collect.android.activities.CaptureSelfieVideoActivityNewApi" />
 
         <!--
         Register AnalyticsReceiver and AnalyticsService to support background
@@ -189,6 +253,10 @@ the specific language governing permissions and limitations under the License.
             android:name="firebase_crashlytics_collection_enabled"
             android:value="@bool/FIREBASE_CRASHLYTICS_ENABLED" />
 
+        <meta-data
+            android:name="firebase_analytics_collection_enabled"
+            android:value="@bool/FIREBASE_CRASHLYTICS_ENABLED" />
+
         <uses-library
             android:name="com.google.android.maps"
             android:required="false" />
@@ -205,43 +273,43 @@ the specific language governing permissions and limitations under the License.
 
         <provider
             android:name=".provider.FormsProvider"
-            android:authorities="org.odk.collect.android.provider.odk.forms"
+            android:authorities="org.bcss.collect.android.provider.odk.forms"
             android:exported="true" />
         <provider
             android:name=".provider.InstanceProvider"
-            android:authorities="org.odk.collect.android.provider.odk.instances"
+            android:authorities="org.bcss.collect.android.provider.odk.instances"
             android:exported="true" />
 
         <activity-alias
             android:name=".activities.FormEntryActivity"
-            android:targetActivity=".activities.FormEntryActivity">
+            android:targetActivity="org.odk.collect.android.activities.FormEntryActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
 
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:mimeType="vnd.android.cursor.item/vnd.odk.form" />
-                <data android:mimeType="vnd.android.cursor.item/vnd.odk.instance" />
+                <data android:mimeType="vnd.android.cursor.item/vnd.bcss.form" />
+                <data android:mimeType="vnd.android.cursor.item/vnd.bcss.instance" />
             </intent-filter>
         </activity-alias>
 
         <activity-alias
             android:name=".activities.InstanceChooserList"
-            android:targetActivity=".activities.InstanceChooserList">
+            android:targetActivity="org.odk.collect.android.activities.InstanceChooserList">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
 
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:mimeType="vnd.android.cursor.dir/vnd.odk.instance" />
+                <data android:mimeType="vnd.android.cursor.dir/vnd.bcss.instance" />
             </intent-filter>
         </activity-alias>
 
         <activity-alias
             android:name=".activities.FormChooserList"
-            android:targetActivity=".activities.FormChooserList">
+            android:targetActivity="org.odk.collect.android.activities.FormChooserList">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
@@ -249,23 +317,23 @@ the specific language governing permissions and limitations under the License.
 
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:mimeType="vnd.android.cursor.dir/vnd.odk.form" />
+                <data android:mimeType="vnd.android.cursor.dir/vnd.bcss.form" />
             </intent-filter>
         </activity-alias>
 
         <activity-alias
             android:name=".activities.FormDownloadList"
-            android:targetActivity=".activities.FormDownloadList">
+            android:targetActivity="org.odk.collect.android.activities.FormDownloadList">
             <intent-filter>
                 <action android:name="org.odk.collect.android.FORM_DOWNLOAD" />
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="vnd.android.cursor.dir/vnd.odk.form" />
             </intent-filter>
         </activity-alias>
 
         <activity-alias
             android:name=".activities.InstanceUploaderList"
-            android:targetActivity=".activities.InstanceUploaderListActivity" >
+            android:targetActivity="org.odk.collect.android.activities.InstanceUploaderListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
@@ -276,17 +344,17 @@ the specific language governing permissions and limitations under the License.
 
         <activity-alias
             android:name=".activities.InstanceUploaderActivity"
-            android:targetActivity=".activities.InstanceUploaderActivity">
+            android:targetActivity="org.odk.collect.android.activities.InstanceUploaderActivity">
             <intent-filter>
                 <action android:name="org.odk.collect.android.INSTANCE_UPLOAD" />
-                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="vnd.android.cursor.dir/vnd.odk.instance" />
             </intent-filter>
         </activity-alias>
 
         <activity-alias
             android:name=".activities.SplashScreenActivity"
-            android:targetActivity=".activities.SplashScreenActivity">
+            android:targetActivity="org.odk.collect.android.activities.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -297,7 +365,7 @@ the specific language governing permissions and limitations under the License.
 
         <!-- Enable Shortcuts for Command Actions -->
         <activity
-            android:name=".activities.AndroidShortcuts"
+            android:name="org.odk.collect.android.activities.AndroidShortcuts"
             android:label="ODK Form"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
