Instanceuploader separated from odk files

--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -123,6 +123,8 @@
         <activity android:name="org.fieldsight.naxa.educational.EduMat_ViewTextTitleDetailsActivity" />
         <activity android:name="org.fieldsight.naxa.educational.EduMat_ViewImageDetailsActivity" />
         <activity android:name="org.fieldsight.naxa.educational.EduMat_ViewVideoDetailsActivity" />
+        <activity android:name="org.fieldsight.naxa.FSInstanceUploaderListActivity" />
+        <activity android:name="org.fieldsight.naxa.FsInstanceChooserList" />
         <activity android:name="org.fieldsight.naxa.sync.ContentDownloadActivity" />
         <activity android:name="org.fieldsight.naxa.onboarding.DownloadActivity" />
         <activity
