Adds educational material  on click on fieldsight fragment (#366)

--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -372,5 +372,6 @@
             </intent-filter>
         </activity>
         <activity android:name="org.fieldsight.naxa.forms.FormsFragmentHostActivity" />
+        <activity android:name="org.fieldsight.naxa.forms.ui.EducationalMaterialListActivity" />
     </application>
 </manifest>
