--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -254,7 +254,7 @@ configurations.all {
         force('com.google.code.findbugs:jsr305:1.3.9')
 
         //todo: identify and fix this conflict
-        //Conflict with dependency 'org.objenesis:objenesis' in project ':collect_app'. Resolved versions for app (2.4) and test app (2.6) differ.
+        //Conflict with dependency 'org.objenesis:objenesis' in PROJECT ':collect_app'. Resolved versions for app (2.4) and test app (2.6) differ.
         force 'org.objenesis:objenesis:2.1'
     }
     transitive = true
