--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,94 +130,94 @@ jobs:
 
   ## Run unit tests
 
-  test_unit:
-    <<: *android_config
-    steps:
-        - checkout
-##        - *restore_cache
-##      Depending on actual usage, we could toggle the above cache restoration (the step below includes it.)
-        - *restore_tests_cache
-        - *accept_licenses
-        - run:
-            name: Download dependencies
-            command: ./gradlew androidDependencies
-        - run:
-            name: Run unit tests
-            command: ./gradlew testDebugUnitTest
-        - *save_tests_cache
-        - *persist_debug_workspace
-        - store_artifacts:
-            path: collect_app/build/reports
-            destination: reports
-        - store_test_results:
-            path: collect_app/build/test-results
-
-  ## Run instrumented tests
-
-  test_instrumented:
-    <<: *gcloud_config
-    steps:
-      - *attach_debug_workspace
-      - run:
-          name: Authorize gcloud
-          command: |
-            if [[ "$CIRCLE_PROJECT_USERNAME" == "opendatakit" ]]; then \
-              gcloud config set project api-project-322300403941
-              echo $GCLOUD_SERVICE_KEY | base64 --decode > client-secret.json
-              gcloud auth activate-service-account --key-file client-secret.json
-            fi
-      - run:
-          name: Run integration tests
-          command: |
-            if [[ "$CIRCLE_PROJECT_USERNAME" == "opendatakit" ]]; then \
-              echo "y" | gcloud firebase test android run \
-              --type instrumentation \
-              --app collect_app/build/outputs/apk/debug/*.apk \
-              --test collect_app/build/outputs/apk/androidTest/debug/*.apk \
-              --device model=Pixel2,version=27,locale=en,orientation=portrait \
-              --results-bucket opendatakit-collect-test-results \
-              --environment-variables coverage=true,coverageFile=/sdcard/coverage.ec \
-              --directories-to-pull /sdcard --timeout 20m
-            fi
-      - run:
-          name: Copy integration test results
-          command: |
-            if [[ "$CIRCLE_PROJECT_USERNAME" == "opendatakit" ]]; then \
-              mkdir firebase
-              gsutil -m cp -r -U "`gsutil ls gs://opendatakit-collect-test-results | tail -1`*" /root/work/firebase/ | true
-            fi
-      - *persist_firebase_workspace
-      - store_test_results:
-          path: firebase/
-          destination: /firebase/
-
-  ## Submit JaCoCo coverage report
-
-  report_coverage:
-    <<: *android_config
-    steps:
-      - checkout
-      - *restore_cache
-      - run:
-          name: Download dependencies
-          command: ./gradlew androidDependencies
-      - *attach_debug_workspace
-      - *attach_firebase_workspace
-      - run:
-          name: Move Firebase coverage report
-          command: |
-            if [[ "$CIRCLE_PROJECT_USERNAME" == "opendatakit" ]]; then \
-              mkdir -p collect_app/build/outputs/code-coverage/connected && cp firebase/Pixel2-27-en-portrait/artifacts/coverage.ec collect_app/build/outputs/code-coverage/connected/coverage.ec
-            fi
-      - run:
-          name: Generate JaCoCo report
-          command: ./gradlew -PciBuild=true jacocoTestReport
-      - run:
-          name: Upload coverage report to CodeCov
-          command: bash <(curl -s https://codecov.io/bash)
-      - store_artifacts:
-          path: collect_app/build/reports/
-          destination: /reports/
+#  test_unit:
+#    <<: *android_config
+#    steps:
+#        - checkout
+###        - *restore_cache
+###      Depending on actual usage, we could toggle the above cache restoration (the step below includes it.)
+#        - *restore_tests_cache
+#        - *accept_licenses
+#        - run:
+#            name: Download dependencies
+#            command: ./gradlew androidDependencies
+#        - run:
+#            name: Run unit tests
+#            command: ./gradlew testDebugUnitTest
+#        - *save_tests_cache
+#        - *persist_debug_workspace
+#        - store_artifacts:
+#            path: collect_app/build/reports
+#            destination: reports
+#        - store_test_results:
+#            path: collect_app/build/test-results
+#
+#  ## Run instrumented tests
+#
+#  test_instrumented:
+#    <<: *gcloud_config
+#    steps:
+#      - *attach_debug_workspace
+#      - run:
+#          name: Authorize gcloud
+#          command: |
+#            if [[ "$CIRCLE_PROJECT_USERNAME" == "opendatakit" ]]; then \
+#              gcloud config set project api-project-322300403941
+#              echo $GCLOUD_SERVICE_KEY | base64 --decode > client-secret.json
+#              gcloud auth activate-service-account --key-file client-secret.json
+#            fi
+#      - run:
+#          name: Run integration tests
+#          command: |
+#            if [[ "$CIRCLE_PROJECT_USERNAME" == "opendatakit" ]]; then \
+#              echo "y" | gcloud firebase test android run \
+#              --type instrumentation \
+#              --app collect_app/build/outputs/apk/debug/*.apk \
+#              --test collect_app/build/outputs/apk/androidTest/debug/*.apk \
+#              --device model=Pixel2,version=27,locale=en,orientation=portrait \
+#              --results-bucket opendatakit-collect-test-results \
+#              --environment-variables coverage=true,coverageFile=/sdcard/coverage.ec \
+#              --directories-to-pull /sdcard --timeout 20m
+#            fi
+#      - run:
+#          name: Copy integration test results
+#          command: |
+#            if [[ "$CIRCLE_PROJECT_USERNAME" == "opendatakit" ]]; then \
+#              mkdir firebase
+#              gsutil -m cp -r -U "`gsutil ls gs://opendatakit-collect-test-results | tail -1`*" /root/work/firebase/ | true
+#            fi
+#      - *persist_firebase_workspace
+#      - store_test_results:
+#          path: firebase/
+#          destination: /firebase/
+#
+#  ## Submit JaCoCo coverage report
+#
+#  report_coverage:
+#    <<: *android_config
+#    steps:
+#      - checkout
+#      - *restore_cache
+#      - run:
+#          name: Download dependencies
+#          command: ./gradlew androidDependencies
+#      - *attach_debug_workspace
+#      - *attach_firebase_workspace
+#      - run:
+#          name: Move Firebase coverage report
+#          command: |
+#            if [[ "$CIRCLE_PROJECT_USERNAME" == "opendatakit" ]]; then \
+#              mkdir -p collect_app/build/outputs/code-coverage/connected && cp firebase/Pixel2-27-en-portrait/artifacts/coverage.ec collect_app/build/outputs/code-coverage/connected/coverage.ec
+#            fi
+#      - run:
+#          name: Generate JaCoCo report
+#          command: ./gradlew -PciBuild=true jacocoTestReport
+#      - run:
+#          name: Upload coverage report to CodeCov
+#          command: bash <(curl -s https://codecov.io/bash)
+#      - store_artifacts:
+#          path: collect_app/build/reports/
+#          destination: /reports/
 
 workflows:
   version: 2
