--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,26 +226,26 @@ workflows:
 #       This job will run on every commit on any branch
       - build_debug
 #       Unit tests should only start after a successful build. Or vice versa?
-      - test_unit:
-#         Although the unit testing task could run in parallel with build task,
-#         in such case, it would not benefit from the previous caching in the event of
-#         any change in the .gradle script files.
-#         Hence,
-          requires:
-            - build_debug
-      # Instrumentation tests should only start after unit tests complete gracefully. Or vice versa?
-      - test_instrumented:
-          requires:
-            - test_unit
-          # We'd like to also filter by username and remove the if/fi above, but username filtering is not supported in CircleCI
-          filters:
-            branches:
-              only: master
-      - report_coverage:
-          requires:
-            - test_unit
-            - test_instrumented
-          # We'd like to also filter by username and remove the if/fi above, but username filtering is not supported in CircleCI
-          filters:
-            branches:
-              only: master
+#      - test_unit:
+##         Although the unit testing task could run in parallel with build task,
+##         in such case, it would not benefit from the previous caching in the event of
+##         any change in the .gradle script files.
+##         Hence,
+#          requires:
+#            - build_debug
+#      # Instrumentation tests should only start after unit tests complete gracefully. Or vice versa?
+#      - test_instrumented:
+#          requires:
+#            - test_unit
+#          # We'd like to also filter by username and remove the if/fi above, but username filtering is not supported in CircleCI
+#          filters:
+#            branches:
+#              only: master
+#      - report_coverage:
+#          requires:
+#            - test_unit
+#            - test_instrumented
+#          # We'd like to also filter by username and remove the if/fi above, but username filtering is not supported in CircleCI
+#          filters:
+#            branches:
+#              only: master
