--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -248,7 +248,7 @@
 
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
-            android:value="frue" />
+            android:value="true" />
 
 
         <uses-library
