--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -208,8 +208,8 @@ android {
         // abiFilters to exclude any ABIs; but to keep the APK slim, we include
         // the Mapbox native library only for 32-bit and 64-bit ARM devices and
         // omit it for all X86 devices.
-        exclude 'lib/x86/libmapbox-gl.so'
-        exclude 'lib/x86_64/libmapbox-gl.so'
+//        exclude 'lib/x86/libmapbox-gl.so'
+//        exclude 'lib/x86_64/libmapbox-gl.so'
     }
 
     compileOptions {
