--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -370,5 +370,6 @@
         </activity>
         <activity android:name="org.fieldsight.naxa.forms.FormsFragmentHostActivity" />
         <activity android:name="org.fieldsight.naxa.forms.ui.EducationalMaterialListActivity" />
+        <activity android:name="org.fieldsight.naxa.site.FieldSightMapActivity" />
     </application>
 </manifest>
