--- a/collect_app/build.gradle
+++ b/collect_app/build.gradle
@@ -278,6 +278,7 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
     testImplementation group: 'com.squareup.okhttp3', name: 'mockwebserver', version: '3.12.1'
 
+    implementation "android.arch.paging:runtime:$archPagingVersion"
 
     implementation "com.github.bumptech.glide:glide:${rootProject.glideVersion}"
     annotationProcessor "com.github.bumptech.glide:compiler:${rootProject.glideVersion}"
