--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ local.properties
 
 # gradle env props
 gradle.properties
-secrets.properties
 
 # built application files
 *.apk
@@ -45,3 +44,4 @@ javarosa/
 
 # Config for the official ODK Collect build
 collect_app/src/odkCollectRelease/
+/secret.properties
