--- a/collect_app/src/main/AndroidManifest.xml
+++ b/collect_app/src/main/AndroidManifest.xml
@@ -89,6 +89,7 @@ the specific language governing permissions and limitations under the License.
         android:label="@string/app_name"
         android:largeHeap="true"
         android:supportsRtl="true"
+        android:theme="@style/AppTheme.Light"
         android:usesCleartextTraffic="true">
 
         <provider
